WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61707
Race condition in full screen controller, which leads to problem when web process crashes
https://bugs.webkit.org/show_bug.cgi?id=61707
Summary
Race condition in full screen controller, which leads to problem when web pro...
Darin Adler
Reported
2011-05-29 13:07:52 PDT
Race condition in full screen controller, which leads to problem when web process crashes
Attachments
Patch
(2.02 KB, patch)
2011-05-29 13:08 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(3.97 KB, patch)
2011-05-29 16:59 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-05-29 13:08:49 PDT
Created
attachment 95295
[details]
Patch
Darin Adler
Comment 2
2011-05-29 13:12:32 PDT
Committed
r87644
: <
http://trac.webkit.org/changeset/87644
>
Darin Adler
Comment 3
2011-05-29 16:52:52 PDT
The initial patch was too simple-minded and could result in a WKView leak.
Darin Adler
Comment 4
2011-05-29 16:59:13 PDT
Created
attachment 95308
[details]
Patch
Darin Adler
Comment 5
2011-05-29 17:04:50 PDT
Comment on
attachment 95308
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95308&action=review
> Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:424 > + [self release]; // Balanced by retain in exitAcceleratedCompositingMode below.
I have corrected this to say “above” locally.
mitz
Comment 6
2011-05-29 17:07:34 PDT
Comment on
attachment 95308
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95308&action=review
> Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:410 > + if (!_isExitingAcceleratedCompositingMode) > + return;
This shouldn’t happen. It’s good to be prepared for this, but I suggest asserting that it doesn’t happen, in addition.
>> Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:424 >> + [self release]; // Balanced by retain in exitAcceleratedCompositingMode below. > > I have corrected this to say “above” locally.
Please also correct the name of the method the comment is referring to!
Darin Adler
Comment 7
2011-05-29 17:19:51 PDT
Committed
r87656
: <
http://trac.webkit.org/changeset/87656
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug